# python

./: .envrc  .gitignore  README.md  asyncio-exam.py  branch.py  elasticsearch-client.py  generator-exam.py  pyproject.toml  test.txt
branch_test/: test1.py
day-001/: README.md  input_function.py  len_function.py  print_solution1.py
day-002/: README.md  life_in_weeks.py  test.py
day-003/: README.md  treasure_island.py
day-004/: list.py  main.py  random_module.py  treasure_map.py
day-005/: adding_even_numbers.py  average_height.py  high_score.py  password_generator_improve.py
day-007/: hangman_step1.py  hangman_step2.py
day-008/: caesar-final.py
day-009/: README.md  blind_auction.py
day-010/: README.md  format_name.py
day-011/: README.md
day-012/: README.md  up_down_game.py  variable_scope.py
day-013/: print.py  try_except.py
day-014/: README.md  higher_game.py
day-016/: README.md  pypi_pretty_table.py  turtle.py
day-017/: README.md
day-018/: README.md  tempCodeRunnerFile.py  turtle_mission1.py  turtle_mission2.py  turtle_mission3.py  turtle_mission4.py  turtle_mission5.py  turtle_mission6.py
day-019/: README.md  event_listener.py  test.py
day-020/: README.md  food.py  main.py  scoreboard.py  snake.py
day-021/: inheritance.py
day-024/: README.md
day-025/: README.md  creat_dataframe.py  csv_file.py  dump_data_creator.py  pandas_basic.py
day-026/: README.md  pandas_itterrows.py
day-027/: README.md  main.py  mile_to_kilo_converter.py  playground.py  tkinter_challenge.py
day-028/: README.md  main.py
day-029/: README.md  main.py
day-031/: README.md  main.py
day-033/: request_parameter.py
day010/: format_name.py
day02/: tip_calculator.py
day03/: leap_year.py
day1/: input_function.py  kkamji_band_name_generator.py  len_function.py  print_solution2.py
day10/: calculator.py  leaf_year.py
day2/: BMI_calculator.py  tip_calculator.py
day3/: BMI_calculator.py  love_calculator_loop.py  pizza.py  treasure_island.py
day5/: average_height.py  password_generator.py
day6/: function.py  while_loop.py
day7/: README.md  hangman_step5.py
day8/: caesar-step1.py  caesar-step2.py  caesar-stpe3.py  caesar_stpe3.py  greet.py  paint_area_calculator.py  (+1 more)
test_fast_api/: .gitignore  .prompt.md  README.md  pyproject.toml
test_fast_api/app/: crud.py  main.py  schemas.py
test_fast_api/tests/: conftest.py  test_main.py
(+150 files in other folders)
