[tool.black]
exclude = '''
/day5/.*password.*
|/day8/.*
'''

[tool.poetry]
name = "python-study"
version = "0.1.0"
description = ""
authors = ["KKamJi <xowl5460@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
elasticsearch = "^8.16.0"
requests = "^2.32.3"
selenium = "^4.27.1"
prometheus-client = "^0.21.1"
kubernetes = "^32.0.0"
tabulate = "^0.9.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
boto3 = "^1.37.21"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
logging = "^0.4.9.6"
rich = "^14.0.0"
pydantic = {extras = ["email"], version = "^2.11.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
